--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+group = org.opensourceway.sbom
+version = 1.0.0
+
 orgSpringframeworkBootVersion = 2.7.0
 ioSpringDependencyManagementVersion = 1.0.11.RELEASE
 commonsLang3Version = 3.12.0
