--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 sbom.service.website.domain=https://sbom-service.test.osinfra.cn/
 
-spring.quartz.auto-startup=false
+spring.quartz.auto-startup=true
