Feat: export sbom with sha256 checksum and signature (#246)
* Feat: export sbom with signature

* Test: fix broken tests

* Feat: export sbom with sha256 checksum

* Feat: export sbom with sha256 checksum

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,9 @@ openeuler.newest.versions=openEuler-20.03-LTS-SP1,openEuler-20.03-LTS-SP2,openEu
 
 product_type.addable=OpenHarmony
 
+# Signatrust
+signatrust.client=${SIGNATRUST_CLIENT:}
+signatrust.client.config=${SIGNATRUST_CLIENT_CONFIG:}
+signatrust.key.name=${SIGNATRUST_KEY_NAME:}
+
 spring.profiles.active=dev
