--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -34,3 +34,8 @@ spring.config.import=classpath:/ossindex.properties,classpath:/cve-manager.prope
 
 openeuler.newest.versions=openEuler-22.03-LTS,openEuler-20.03-LTS-SP2
 product_type.addable=testProduct,invalidProductType
+
+# Signatrust
+signatrust.client=${SIGNATRUST_CLIENT:}
+signatrust.client.config=${SIGNATRUST_CLIENT_CONFIG:}
+signatrust.key.name=${SIGNATRUST_KEY_NAME:}
