Feat: get vul from uvp instead of cve-manager and ossIndex (#208)
* Feat: get vul from uvp instead of cve-manager and ossIndex

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ commonsIoVersion = 2.11.0
 packageUrlJavaVersion = 1.4.1
 hibernateTypesVersion = 2.21.1
 kotlinVersion = 1.8.21
+cvssCalculatorVersion=1.4.1
