--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.batch.jdbc.initialize-schema=always
 spring.config.import=classpath:/vcs.properties,classpath:/license.properties,classpath:/sonatype.properties,classpath:/uvp.properties
 
 openeuler.newest.versions=openEuler-20.03-LTS-SP1,openEuler-20.03-LTS-SP2,openEuler-20.03-LTS-SP3,openEuler-22.03-LTS,openEuler-22.09,\
-  openEuler-22.03-LTS-SP1,openEuler-23.03
+  openEuler-22.03-LTS-SP1,openEuler-23.03,openEuler-22.03-LTS-SP2
 
 product_type.addable=OpenHarmony
 
